# Travel-Agency-Management-System

./: CMakeLists.txt  README.md  main.cpp
Domeniu/: Oferta.cpp  Oferta.h
Exceptii/: Exceptii.h
Exports/: Cos50.csv  data.txt  testhtml.csv  testhtml100.html
Repository/: AbstractRepo.h  FileRepository.h  Repository.h
Service/ServiceCos/: ServiceCos.cpp  ServiceCos.h
Service/ServiceOferta/: ServiceOferta.cpp  ServiceOferta.h
Service/Undo/: ActiuneUndo.h
Teste/: Teste.cpp  Teste.h
UI/InterfataConsola/: Consola.cpp  Consola.h
UI/InterfataQT/: InterfataQT.cpp  InterfataQT.h
Validator/: ValidatorOferta.cpp  ValidatorOferta.h
